component based store implemented

--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -8,9 +8,9 @@
     max-width: 400px;
     margin: auto;
     padding: 50px;
-    border: 2px solid red;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: #b29ae1;
   }
   
   label {
