--- a/src/styles/displayData.css
+++ b/src/styles/displayData.css
@@ -5,6 +5,7 @@
     border: 1px solid #ccc;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: #efa0a0;
   }
   
   h2 {
