--- a/src/styles/employee.css
+++ b/src/styles/employee.css
@@ -2,9 +2,9 @@
     max-width: 400px;
     margin: auto;
     padding: 50px;
-    border: 2px solid red;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: #c8e495;
   }
   
   label {
